compiler/a2/grammer
STMTS -> STMTS STMT | STMT
STMT -> ASSIGN ;
STMT -> LISTEXPR ;
ASSIGN -> set VAR LISTEXPR
LISTEXPR -> VAR
LISTEXPR -> CONCAT
LISTEXPR -> ( ITEMS )
LISTEXPR -> cdr LISTEXPR
VAR -> char
CONCAT -> LISTEXPR + LISTEXPR
ITEMS -> ITEMS ITEM | ITEM
ITEM -> LISTEXPR
ITEM -> str | int | real
ITEM -> car LISTEXPR
ITEM ->

STMTS -> STMT STMTEND
STMTEND -> STMT STMTEND
STMTEND -> 
STMT -> ASSIGN ;
STMT -> ADDEXPR ;
ASSIGN -> set VAR ADDEXPR
ADDEXPR -> ADDEXPR' + ADDEXPR | ADDEXPR'
ADDEXPR' -> LISTEXPR + ADDEXPR' | LISTEXPR
LISTEXPR -> VAR
VAR -> char
LISTEXPR -> ( ITEMS )
LISTEXPR -> cdr LISTEXPR
ITEMS -> ITEM ITEMEND
ITEMEND -> ITEM ITEMEND
ITEMEND -> 
ITEM -> ADDEXPR
ITEM -> str | int | real
ITEM -> car LISTEXPR
ITEM ->
